net, ipv4, tcp_noord: minor cleanup
This commit addresses minor typos in the code, none of which
influenced its correct behavior.

Signed-off-by: Daniele Cristofori <daniele.cristofori89@gmail.com>
Signed-off-by: Stefano Alletto <alletto.s@gmail.com>
Signed-off-by: Arianna Avanzini <avanzini.arianna@gmail.com>

--- a/net/ipv4/Kconfig
+++ b/net/ipv4/Kconfig
@@ -675,7 +675,7 @@ config DEFAULT_TCP_CONG
 	default "vegas" if DEFAULT_VEGAS
 	default "westwood" if DEFAULT_WESTWOOD
 	default "veno" if DEFAULT_VENO
-	default "tcp_noord" if DEFAULT_NOORDWIJK
+	default "noord" if DEFAULT_NOORDWIJK
 	default "reno" if DEFAULT_RENO
 	default "dctcp" if DEFAULT_DCTCP
 	default "cubic"
